@@ -28,7 +28,7 @@
 CGAL_BEGIN_NAMESPACE
 
 // We use the following template class in order to avoid having a static data
-// member of a non-template class which would require src/Triangulation_3.C .
+ // member of a non-template class which would require src/Triangulation_3.C .
 template < class T = void >
 struct Triangulation_utils_base_3
 {
@@ -45,9 +45,9 @@ const char Triangulation_utils_base_3<T>::tab_next_around_edge[4][4] = {
 
 template < class T >
 const int Triangulation_utils_base_3<T>::tab_vertex_triple_index[4][3] = {
-  {1, 3, 2}, 
-  {0, 2, 3},
-  {0, 3, 1}, 
+  {1, 2, 3}, 
+  {2, 3, 0},
+  {3, 0, 1}, 
   {0, 1, 2}
 };
 
